--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   color-scheme: light dark;
   font-synthesis: none;
@@ -9,11 +5,76 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-a {
-  @apply font-medium text-[#646cff];
+h1 {
+  margin: 1em 0 0.25em 0;
 }
-a:hover {
-  @apply text-[#535bf2];
+
+h5 {
+  margin: 0;
+}
+
+body {
+  background-color: #181825;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+}
+
+.text {
+  color: #cdd6f4;
+  font-family:
+    JetBrains Mono,
+    monospace;
+  font-size: 15px;
+}
+
+#instructions {
+  float: left;
+  position: absolute;
+  left: 1.5%;
+  bottom: 3%;
+  font-size: small;
+  line-height: 110%;
+}
+
+#details {
+  display: flex;
+  flex-direction: column;
+  padding-left: 2.5%;
+}
+
+#output {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10%;
+}
+
+#grid pre {
+  line-height: 1;
+}
+
+#output span {
+  font-family:
+    JetBrains Mono,
+    monospace;
+  letter-spacing: -0.1em;
+}
+
+#score pre {
+  line-height: 1;
+}
+
+#score span {
+  font-family:
+    JetBrains Mono,
+    monospace;
+  letter-spacing: -0.1em;
 }
